# mendes

./: Cargo.toml  LICENSE-MIT  README.md  codecov.yml  deny.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: rust.yml
mendes/: Cargo.toml
mendes-derive/: Cargo.toml
mendes-derive/src/: lib.rs
mendes-macros/: Cargo.toml
mendes-macros/src/: cookies.rs  forms.rs  lib.rs  models.rs  route.rs  util.rs
mendes-models/: Cargo.toml
mendes-models/src/: lib.rs
mendes-models/tests/: basic.rs
mendes/examples/: README.md  basic.rs
mendes/src/: application.rs  askama.rs  body.rs  cookies.rs  form.rs  forms.rs  hyper.rs  key.rs  lib.rs  models.rs  multipart.rs  route.rs  utils.rs
mendes/src/models/: postgres.rs
mendes/tests/: askama.rs  basic.rs  body.rs  cookies.rs  forms.rs  hyper.rs  models.rs  readme.rs
