[package]
name = "mendes-macros"
version = "0.0.9"
authors = ["Dirkjan Ochtman <dirkjan@ochtman.nl>"]
description = "Macros for mendes web toolkit"
documentation = "https://docs.rs/mendes-macros"
repository = "https://github.com/djc/mendes"
license = "MIT OR Apache-2.0"
workspace = ".."
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "1", features = ["full"] }
proc-macro2 = "1"
