[package]
name = "mendes-macros"
version = "0.1.1"
authors = ["Dirkjan Ochtman <dirkjan@ochtman.nl>"]
description = "Macros for mendes web toolkit"
documentation = "https://docs.rs/mendes-macros"
repository = "https://github.com/djc/mendes"
license = "MIT OR Apache-2.0"
workspace = ".."
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.2"
syn = { version = "1.0.5", features = ["full"] }
proc-macro2 = "1.0.8"
darling = "0.14"
