[package]
name = "mendes-macros"
version = "0.2.0"
description = "Macros for mendes web toolkit"
documentation = "https://docs.rs/mendes-macros"
repository = "https://github.com/djc/mendes"
license = "MIT OR Apache-2.0"
workspace = ".."
edition = "2021"
rust-version = "1.58"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.2"
syn = { version = "2", features = ["full"] }
proc-macro2 = "1.0.8"
